--- a/src/components/fields/DistanceField.astro
+++ b/src/components/fields/DistanceField.astro
@@ -14,7 +14,7 @@ const { name, description, distance, uphill, link } = Astro.props;
       <span class="distance-label">{uphill} m+</span>
     </div>
   </div>
-  <a href={link} class="button-link">
+  <a href={`categorias#${link}`} class="button-link">
     <button
       class="px-6 py-2 bg-[#e49a69] text-sm text-white rounded hover:bg-[#d88b5c] transition-colors focus:ring-2 focus:ring-[#e49a69] focus:ring-opacity-50 cursor-pointer"
     >
@@ -27,7 +27,7 @@ const { name, description, distance, uphill, link } = Astro.props;
 .main-container.distance-card {
   margin: 20px auto;
   width: 80%;
-  max-width: 400px;
+  max-width: 600px;
   padding: 20px;
   background-color: #f8f8f8;
   border-radius: 16px;
